src/css/style.css
/* ... */
.PageGrid > * {
  grid-column: content;
}

.PageHeader__navList {
  display: flex;
  flex-wrap: wrap;
}

.PageHeader__navListItem:first-of-type {
  font-weight: bold;
}

/* Inline padding on every item except for last */
.PageHeader__navListItem:not(:last-of-type) {
  padding-inline-end: var(--size-3);
}

/* Hide dividing slash when screen's so small it wraps to own line */
@media (min-width: 240px) {
  .PageHeader__navListItem:first-of-type {
    padding-inline-start: 0;
    padding-inline-end: 0;
  }

  .PageHeader__navListItem:first-of-type::after {
    content: "/";
    color: var(--gray-light);
    padding-inline-start: calc(var(--size-3) / 2);
    padding-inline-end: calc(var(--size-3) / 2);
  }
}

/**
 * TODO: Make this not need a media query
 */
@media (min-width: 600px) {
  .PageHeader__navList {
    justify-content: flex-end;
  }

  .PageHeader__navListItem:first-of-type {
    margin-inline-end: auto;
    padding-block-end: 0;
  }

  .PageHeader__navListItem:first-of-type::after {
    content: none;
  }
}

.SkipNav {
  text-decoration: underline;
}

.SkipNav:hover {
  text-decoration: none;
}

.SkipNav::after {
  content: " ↷";
}

.Articles__list > * + * {
  margin-block-start: var(--gap-4);
}

.Article__header > * + * {
  margin-block-start: var(--size-1);
}

.Article__title {
  font-feature-settings: "case" on;
  font-size: var(--font-size-title);
  hanging-punctuation: first;
  line-height: 1.2;
}

.Article__title > a {
  text-decoration: none;
}

.Article__meta {
  display: flex;
  flex-wrap: wrap;
  color: var(--text-muted);
  font-size: var(--font-size-small);
  font-variant-numeric: lining-nums;
}

.Article__title + .Article__meta {
  margin-block-start: var(--size-05);
}

/* If meta label is not `visually-hidden`, we need a space after it */
.Article__meta dt:not([class="visually-hidden"])::after {
  content: "\00a0";
}

.Article__meta dd:not(:last-of-type)::after {
  content: "/";
  color: var(--gray-light);
  padding-inline-start: var(--size-05);
  padding-inline-end: var(--size-05);
}

/* Prose
   ========================================================================== */

.Prose {
  hanging-punctuation: first;
  hyphens: auto;
  line-height: inherit;
  word-break: break-word;
}

.Prose--contain > * {
  max-width: var(--linear-measure);
}

.Prose > * + * {
  margin-block-start: var(--size-1);
}

.Prose > h2,
.Prose > h3 {
  hanging-punctuation: first;
}

.Prose > h2 {
  margin-block-start: var(--size-5);
}

.Prose ol,
.Prose ul {
  padding-inline-start: 1em;
}

/* TODO: First selector's kinda lame, requires !imp on TagsGrid (tags.css) */
.Prose li:not(:first-child),
.Prose li > ul,
.Prose li > ol {
  margin-block-start: var(--size-05);
}

.Prose li > * + * {
  margin-block-start: var(--size-05);
}

/* Extra block margin on these elems */
.Prose > blockquote,
.Prose > figure,
.Prose > hr,
.Prose > blockquote + *,
.Prose > hr + *,
.Prose > figure + * {
  margin-block-start: var(--size-5);
}

.Prose figcaption {
  color: var(--text-muted);
  font-size: var(--font-size-small);
  line-height: 1.5;
  margin-block-start: var(--size-0);
}

/* `!important` b/c it overrides Prism.js */
.Prose > pre,
.Prose > pre + * {
  margin-block-start: var(--size-5) !important;
}

/* `!important` b/c it overrides Prism.js */
.Prose > pre {
  margin-inline-start: -1em !important;
  margin-inline-end: -1em !important;
}

.Prose--contain > pre {
  /* TODO: ? */
  width: calc(100vw - 1.25em);
  /* Subtract inline margin pull amount to max width */
  max-width: calc(var(--linear-measure) + 2em);
}

/* Reset block margin on floated figs */
.Prose--article > .align-pull-end,
.Prose--article > .align-pull-end + *,
.Prose--article > .align-pull-start,
.Prose--article > .align-pull-start + * {
  margin-block-start: var(--size-2);
}

.Prose--article > figure + .Article__footer {
  margin-block-start: var(--size-2);
}

/* TODO: Maybe we can get rid of this now that we've
encapsulated in --article ? */
/* Actually I made it generic/default and put it in Prose...
it was only being used to avoid issues on book drawings page. */
/* .Prose--article [class^="align-"] figcaption {
  color: var(--text-muted);
  font-size: var(--font-size-small);
  line-height: 1.5;
  margin-block-start: var(--size-0);
} */

/* TODO: Do we need a flow util on `figcaption`, in case of multi paras? */

/* TODO: Implement multi image rows */

/* Avoid margin staggering on side-by-side photos */
/* .Prose img {
  margin-block-start: 0;
} */

.Prose--article > .align-full-bleed {
  /* Unset this width limitation from .Prose */
  --linear-measure: auto;
  display: grid;
  grid-template-columns:
    /* Add padding gap to align end right w/ .Prose text */
    [bleed-start] minmax(0, calc(var(--text-measure) + var(--gap)))
    [measure] 1fr
    [bleed-end];
  margin-inline-start: calc(var(--gap) * -1);
  margin-inline-end: calc(var(--gap) * -1);
}

.Prose--article > .align-full-bleed > :first-child {
  grid-column: bleed;
}

.Prose--article > .align-full-bleed > figcaption {
  /* Add side padding to offset being full-width */
  padding-inline-start: var(--gap);
  padding-inline-end: var(--gap);
}

@media (min-width: 440px) {
  .Prose > .align-end,
  .Prose > .align-pull-end {
    float: inline-end;
    margin-inline-start: var(--gap);
    /* width: 33%; */
    /* Set minimum width of 250px */
    width: max(250px, 33%);
  }

  .Prose > .align-pull-end {
    margin-inline-end: calc(var(--gap) * -1);
  }

  .Prose > .align-start,
  .Prose > .align-pull-start {
    float: inline-start;
    margin-inline-end: var(--gap);
    /* Set minimum width of 250px */
    width: max(250px, 33%);
  }

  /* Pull figure into page gutter padding area */
  .Prose > .align-pull-start {
    margin-inline-start: calc(var(--gap) * -1);
  }
}

.Prose--article > .photo-row {
  display: grid;
  gap: var(--size-0);
  /* Get --columns property from HTML to decide how many to display */
  grid-template-columns: repeat(var(--columns, 2), 1fr);
}
/* ... */

